--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -182,4 +182,7 @@
     <string name="advanced_settings">Advanced settings</string>
     <string name="incorrect_code_scanned">Incorrect code scanned!</string>
     <string name="copy_alarm">Copy alarm</string>
+    <string name="default_alarm_code">Default alarm code</string>
+    <string name="no_assigned_code">No assigned code</string>
+    <string name="default_alarm_code_description">Set the code that will be automatically used for all newly created alarms:</string>
 </resources>
