Added the option of clearing the default alarm code

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -186,4 +186,5 @@
     <string name="default_alarm_code">Code d\'alarme par défaut</string>
     <string name="no_assigned_code">Pas de code assigné</string>
     <string name="default_alarm_code_description">Définissez le code qui sera automatiquement utilisé pour toutes les alarmes nouvellement créées :</string>
+    <string name="clear_default_code">Effacer le code par défaut</string>
 </resources>
