--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -180,4 +180,5 @@
     <string name="default_alarm_code">Varsayılan alarm kodu</string>
     <string name="no_assigned_code">Atanmış kod yok</string>
     <string name="default_alarm_code_description">Yeni oluşturulan tüm alarmlar için otomatik olarak kullanılacak kodu ayarlayın:</string>
+    <string name="clear_default_code">Varsayılan kodu temizle</string>
 </resources>
