--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -180,4 +180,5 @@
     <string name="default_alarm_code">Standard-Alarmcode</string>
     <string name="no_assigned_code">Kein zugewiesener Code</string>
     <string name="default_alarm_code_description">Legen Sie den Code fest, der automatisch für alle neu erstellten Alarme verwendet werden soll:</string>
+    <string name="clear_default_code">Standardcode löschen</string>
 </resources>
