--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -186,4 +186,5 @@
     <string name="default_alarm_code">Código de alarma por defecto</string>
     <string name="no_assigned_code">Sin código asignado</string>
     <string name="default_alarm_code_description">Establezca el código que se utilizará automáticamente para todas las alarmas de nueva creación:</string>
+    <string name="clear_default_code">Borrar código por defecto</string>
 </resources>
