--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -174,4 +174,5 @@
     <string name="default_alarm_code">默认警报代码</string>
     <string name="no_assigned_code">无指定代码</string>
     <string name="default_alarm_code_description">设置自动用于所有新建警报的代码：</string>
+    <string name="clear_default_code">清除默认代码</string>
 </resources>
