--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -193,4 +193,6 @@
     <string name="no_assigned_code">Немає присвоєного коду</string>
     <string name="default_alarm_code_description">Задайте код, який буде автоматично використовуватися для всіх новостворених тривог:</string>
     <string name="clear_default_code">Очистити код за замовчуванням</string>
+    <string name="keep_ringer_on">Не вимикайте дзвінок</string>
+    <string name="keep_ringer_on_description">Не допускайте режимів беззвучного/вібраційного дзвінка, які можуть перебити звук будильника.</string>
 </resources>
