--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -187,4 +187,6 @@
     <string name="no_assigned_code">Pas de code assigné</string>
     <string name="default_alarm_code_description">Définissez le code qui sera automatiquement utilisé pour toutes les alarmes nouvellement créées :</string>
     <string name="clear_default_code">Effacer le code par défaut</string>
+    <string name="keep_ringer_on">Maintien de la sonnerie</string>
+    <string name="keep_ringer_on_description">Ne pas autoriser les modes de sonnerie silencieux/vibration qui pourraient perturber le son de l\'alarme.</string>
 </resources>
