--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -193,4 +193,6 @@
     <string name="no_assigned_code">Brak przypisanego kodu</string>
     <string name="default_alarm_code_description">Ustaw kod, który będzie automatycznie używany dla wszystkich nowo utworzonych alarmów:</string>
     <string name="clear_default_code">Wyczyść kod domyślny</string>
+    <string name="keep_ringer_on">Włączony dzwonek</string>
+    <string name="keep_ringer_on_description">Nie zezwalaj na tryby cichego/wibracyjnego dzwonka, które mogą zakłócać dźwięk alarmu.</string>
 </resources>
