--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -181,4 +181,6 @@
     <string name="no_assigned_code">Atanmış kod yok</string>
     <string name="default_alarm_code_description">Yeni oluşturulan tüm alarmlar için otomatik olarak kullanılacak kodu ayarlayın:</string>
     <string name="clear_default_code">Varsayılan kodu temizle</string>
+    <string name="keep_ringer_on">Zili açık tut</string>
+    <string name="keep_ringer_on_description">Alarm sesini bozabilecek sessiz/titreşimli zil modlarına izin vermeyin.</string>
 </resources>
