--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -175,4 +175,6 @@
     <string name="no_assigned_code">无指定代码</string>
     <string name="default_alarm_code_description">设置自动用于所有新建警报的代码：</string>
     <string name="clear_default_code">清除默认代码</string>
+    <string name="keep_ringer_on">保持铃声开启</string>
+    <string name="keep_ringer_on_description">不允许使用静音/振动响铃模式，因为这会干扰闹钟声音。</string>
 </resources>
