Alarms on the home screen are now grouped by their active state

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -183,4 +183,6 @@
     <string name="clear_default_code">Standardcode löschen</string>
     <string name="keep_ringer_on">Rufton anlassen</string>
     <string name="keep_ringer_on_description">Lassen Sie keine Stumm-/Vibrations-Rufmodi zu, die den Alarmton stören könnten.</string>
+    <string name="active_alarms">Aktive Alarme</string>
+    <string name="non_active_alarms">Nicht aktive Alarme</string>
 </resources>
