Improved Chinese translations

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -169,20 +169,20 @@
     <string name="using_system_alarm_volume">当前使用系统闹钟音量</string>
     <string name="ok">好的</string>
     <string name="advanced_settings">高级设置</string>
-    <string name="incorrect_code_scanned">扫描的代码不正确！</string>
+    <string name="incorrect_code_scanned">此码不匹配！</string>
     <string name="copy_alarm">复制此闹钟</string>
-    <string name="default_alarm_code">默认警报代码</string>
-    <string name="no_assigned_code">无指定代码</string>
-    <string name="default_alarm_code_description">设置自动用于所有新建警报的代码：</string>
-    <string name="clear_default_code">清除默认代码</string>
-    <string name="keep_ringer_on">保持铃声开启</string>
-    <string name="keep_ringer_on_description">不允许使用静音/振动响铃模式，因为这会干扰闹钟声音。</string>
-    <string name="active_alarms">活动警报</string>
-    <string name="non_active_alarms">非活动警报</string>
-    <string name="dont_have_code">没有密码？</string>
-    <string name="download_your_qr_code">下载二维码</string>
-    <string name="download_your_qr_code_description">如果你没有自己的二维码可以扫描，可以下载一个，打印出来，放在离床较远的地方。</string>
-    <string name="download_code">下载代码</string>
-    <string name="saved_qr_code">保存的 QR 码！</string>
-    <string name="could_not_save_qr_code">无法保存 QR 代码。</string>
+    <string name="default_alarm_code">默认二维码/条形码</string>
+    <string name="no_assigned_code">未录入</string>
+    <string name="default_alarm_code_description">新建闹钟后自动使用此条码（若有）：</string>
+    <string name="clear_default_code">清除默认条码</string>
+    <string name="keep_ringer_on">保持响铃</string>
+    <string name="keep_ringer_on_description">禁止使用静音/振动响铃模式，以防止中断闹钟响铃。</string>
+    <string name="active_alarms">已开启</string>
+    <string name="non_active_alarms">已关闭</string>
+    <string name="dont_have_code">打印此码</string>
+    <string name="download_your_qr_code">保存条形码/二维码</string>
+    <string name="download_your_qr_code_description">导出已录入的二维码/条形码图片，打印出来，放在离床较远的地方。</string>
+    <string name="download_code">导出图片</string>
+    <string name="saved_qr_code">导出成功</string>
+    <string name="could_not_save_qr_code">导出失败</string>
 </resources>
