--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -208,4 +208,5 @@
     <string name="start">Start</string>
     <string name="target_colon">Cel:</string>
     <string name="remaining_colon">Pozostało:</string>
+    <string name="emergency_task_setting_description">Zadanie awaryjne w sytuacjach, gdy nie można zeskanować kodu.</string>
 </resources>
