--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -202,4 +202,5 @@
     <string name="start">Démarrage</string>
     <string name="target_colon">Cible:</string>
     <string name="remaining_colon">Restant:</string>
+    <string name="emergency_task_setting_description">Tâche d\'urgence pour les situations où vous ne pouvez pas scanner le code.</string>
 </resources>
