--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -202,4 +202,5 @@
     <string name="start">Inizio</string>
     <string name="target_colon">Obiettivo:</string>
     <string name="remaining_colon">Rimanente:</string>
+    <string name="emergency_task_setting_description">Attività di emergenza per le situazioni in cui non è possibile eseguire la scansione del codice.</string>
 </resources>
